--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+::-webkit-scrollbar {
+  display: none;
+  width: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ol,
+ul {
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+img,
+video {
+  max-width: 100%;
+}
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+  display: block;
+  vertical-align: middle;
 }
 
-.App-link {
-  color: #61dafb;
+.user-input {
+  width: 100% !important;
+  height: 50px !important;
+  background: linear-gradient(
+    123.64deg,
+    rgba(255, 255, 255, 0) -22.38%,
+    rgba(255, 255, 255, 0.039) 70.38%
+  ) !important;
+  color: #fff !important;
+  border: 1px solid #a0aec0 !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-input::placeholder {
+  color: #a0aec0;
+}
+.ant-menu-light .ant-menu-item-selected {
+  background: #0075ff1a !important;
+}
+.bg-primary {
+  background: linear-gradient(
+    126.97deg,
+    rgba(6, 11, 38, 0.74) 28.26%,
+    rgba(26, 31, 55, 0.5) 91.2%
+  );
 }
